--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,15 @@ figcaption {
   background-size: cover;
 }
 
+.light-fade {
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#a7c7dc+0,85b2d3+100;Blue+Grey+3D */
+background: #a7c7dc; /* Old browsers */
+background: -moz-linear-gradient(top,  #a7c7dc 0%, #85b2d3 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top,  #a7c7dc 0%,#85b2d3 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom,  #a7c7dc 0%,#85b2d3 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a7c7dc', endColorstr='#85b2d3',GradientType=0 ); /* IE6-9 */
+
+}
 /*/////// MEDIA ////////*/
 
 img, video, audio, iframe, table, form {
