automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,15 @@ background: -webkit-linear-gradient(top,  #a7c7dc 0%,#85b2d3 100%); /* Chrome10-
 background: linear-gradient(to bottom,  #a7c7dc 0%,#85b2d3 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
 filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a7c7dc', endColorstr='#85b2d3',GradientType=0 ); /* IE6-9 */
 }
+
+.medium-fade {
+  /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#1e5799+50,1e5799+70 */
+background: #1e5799; /* Old browsers */
+background: -moz-linear-gradient(top,  #1e5799 50%, #1e5799 70%); /* FF3.6-15 */
+background: -webkit-linear-gradient(top,  #1e5799 50%,#1e5799 70%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to bottom,  #1e5799 50%,#1e5799 70%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1e5799', endColorstr='#1e5799',GradientType=0 ); /* IE6-9 */
+}
 /*/////// MEDIA ////////*/
 
 img, video, audio, iframe, table, form {
