--- a/css/style.css
+++ b/css/style.css
@@ -140,6 +140,15 @@ img, video, audio, iframe, table, form {
 
 /*////////// NAVBAR //////////*/
 
+#navbar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 2;
+  border-bottom: 1px solid #ccc;
+  text-align: center;
+}
 
 
 /*////////// LOGO //////////*/
