automatically backed up by learn

--- a/css/style.css
+++ b/css/style.css
@@ -166,6 +166,11 @@ img, video, audio, iframe, table, form {
   text-decoration: none;
   font: 1em "Trebuchet MS", Arial, sans-serif;
 }
+
+#navbar nav a.selected {
+  background: #333;
+  color: white;
+}
 /*////////// LOGO //////////*/
 
 
